# Remote-Access-System

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  LICENSE  README.md  README_FILE_SHARING.md  build.sh  build_and_run.sh  deploy_and_run.sh  final_fix.sh  fix_all_errors.sh  fix_all_files.sh  fix_compilation.sh  fix_parentheses.sh  fix_utils.sh  install.sh  main.cpp  manual_install.sh  prototype.xml  start_everything.sh  start_system.sh  test_system.sh
account-server/: CMakeLists.txt
account-server/include/: account_manager.h  account_server_impl.h  database_manager.h  server_manager.h
account-server/sql/: schema.sql
account-server/src/: account_manager.cpp  account_server_impl.cpp  database_manager.cpp  main.cpp  result_set.cpp.bak  server_manager.cpp  types.cpp
common/: CMakeLists.txt
common/include/: Update utils.h  crypto.h  hardware_id.h  message.h  message.h.backup  pc_info.h  protocol.h  protocol.h.backup  types.h  utils.h
common/src/: Update crypto.cpp  Update utils.cpp  crypto.cpp  crypto.cpp.backup  hardware_id.cpp  message.cpp  protocol.cpp  protocol.cpp.backup  utils.cpp
desktop-agent/: CMakeLists.txt  agent_enhanced.py  desktop_agent.cpp  file_handler.py
mobile-app/: CMakeLists.txt  CMakeLists.txt.backup  Makefile  RemoteAccessMobile.apk  RemoteAccessMobile.pro  cmake_install.cmake  main.cpp  main.py  qml.qrc  remoteaccessmobile_qmltyperegistrations.cpp  resources.qrc
mobile-app/.qt/: QtDeploySupport.cmake
mobile-app/.qt/deploy_qml_imports/: RemoteAccessMobile.cmake
mobile-app/.qt_plugins/: Qt6_QmlPlugins_Imports_RemoteAccessMobile.cmake  Qt6_QmlPlugins_Imports_RemoteAccessMobile.rsp
mobile-app/android/: AndroidManifest.xml
mobile-app/build-android/: CMakeCache.txt  Makefile  RemoteAccessMobile_arm64-v8a  android-RemoteAccessMobile-deployment-settings.json  cmake_install.cmake  remoteaccessmobile_qmltyperegistrations.cpp
mobile-app/build-android/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  RemoteAccessMobile_qml.cmake  RemoteAccessMobile_res.cmake
mobile-app/build-android/.qt/qml_imports/: RemoteAccessMobile_conf.cmake  RemoteAccessMobile_conf.rsp
mobile-app/build-android/.qt/rcc/: RemoteAccessMobile_raw_qml_0.qrc  qmake_RemoteAccess.qrc  qrc_RemoteAccessMobile_raw_qml_0.cpp  qrc_qmake_RemoteAccess.cpp
mobile-app/build-android/.rcc/qmlcache/: RemoteAccessMobile_qml_loader_file_list.rsp  RemoteAccessMobile_qmlcache_loader.cpp  all_aotstats.aotstatslist  module_RemoteAccessMobile.aotstatslist
mobile-app/build-android/.rcc/qmllint/: RemoteAccessMobile.rsp  RemoteAccessMobile_json.rsp  RemoteAccessMobile_module.rsp
mobile-app/build-android/RemoteAccess/: RemoteAccessMobile_qml_module_dir_map.qrc  qmldir
mobile-app/build-android/RemoteAccess/qml/: SettingsView.qml  main.qml
mobile-app/build-android/RemoteAccessMobile_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
mobile-app/build-android/RemoteAccessMobile_autogen/6YEA5652QU/: moc_remote_control_client.cpp  moc_remote_control_client.cpp.d  moc_remote_control_client.cpp.json  moc_settings_manager.cpp  moc_settings_manager.cpp.d  moc_settings_manager.cpp.json
mobile-app/build-android/RemoteAccessMobile_autogen/UVLADIE3JM/: moc_connection_manager.cpp  moc_connection_manager.cpp.d  moc_connection_manager.cpp.json  moc_filemanager.cpp  moc_filemanager.cpp.d  moc_filemanager.cpp.json  moc_pc_list_model.cpp  moc_pc_list_model.cpp.d  moc_pc_list_model.cpp.json  moc_pcmanager.cpp  moc_pcmanager.cpp.d  moc_pcmanager.cpp.json
mobile-app/build-android/android-build/: gradle.properties  settings.gradle
mobile-app/build-android/android-build/app/: build.gradle  build.gradle.backup
mobile-app/build-android/android-build/assets/: android_rcc_bundle.rcc
mobile-app/build-android/meta_types/: RemoteAccessMobile_json_file_list.txt  RemoteAccessMobile_json_file_list.txt.timestamp  qt6remoteaccessmobile_metatypes.json.gen
mobile-app/build-android/qmltypes/: RemoteAccessMobile_foreign_types.txt
mobile-app/build-desktop/: Makefile  moc_connection_manager.cpp  moc_filemanager.cpp  moc_pc_list_model.cpp  moc_pcmanager.cpp  moc_remote_control_client.cpp  moc_settings_manager.cpp  qrc_qml.cpp
mobile-app/cmake/: FindACE.cmake  FindTAO.cmake
mobile-app/common/include/: crypto.h  message.h  protocol.h  utils.h
mobile-app/common/src/: crypto.cpp  message.cpp  protocol.cpp  utils.cpp
mobile-app/include/: FileManager.h  connection_manager.h  file_manager.h  filemanager.h.backup  pc_list_model.h  pc_manager.h  pcmanager.h  remote_control_client.h  settings_manager.h
mobile-app/meta_types/: RemoteAccessMobile_json_file_list.txt  RemoteAccessMobile_json_file_list.txt.timestamp  qt6remoteaccessmobile_metatypes.json
mobile-app/qml/: AddPCView.qml  FileExplorerPage.qml  PCListView.qml  main.qml  main.qml.backup  main.qml.backup.20251020_115117  main.qml.backup.working
mobile-app/qml/components/: FileItem.qml  ProgressBar.qml
mobile-app/src/: connection_manager.cpp  connection_manager.h  filemanager.cpp  filemanager.cpp.backup.20251020_114908  filemanager.h  main.cpp  pc_list_model.cpp  pc_list_model.h  pc_manager.cpp.bak  pcmanager.cpp  pcmanager.cpp.bak  pcmanager.h  remote_control_client.cpp  settings_manager.cpp
pc-client/: CMakeLists.txt  file_handler.cpp  file_handler.h.backup  pc_client.cpp  pc_client.h  pc_client_main.cpp  pc_client_main.cpp.backup
pc-client/include/: account_manager.h  connection_manager.h  file_handler.h  file_manager.h  file_server.h  http_server.h  pc_identifier.h  qr_generator.h  relay_client.h  remote_control_server.h
pc-client/src/: account_manager.cpp  connection_manager.cpp  file_handler.cpp  file_handler.cpp.backup  file_manager.cpp  file_server.cpp  http_server.cpp  http_server.cpp.backup  main.cpp  main.cpp.backup  main.cpp.backup.1760764559  main.cpp.bak  pc_identifier.cpp  qr_generator.cpp  relay_client.cpp  remote_control_server.cpp
relay-server/: CMakeLists.txt  CMakeLists.txt.old  (+11 more)
usb-client/: CMakeLists.txt
usb-client/include/: config_manager.h  usb_manager.h
usb-client/src/: config_manager.cpp  main.cpp  usb_manager.cpp
(+44 files in other folders)
